NOCC 1.9.2  ???? ??, ????

  Misc
    * Show attachment size in KB if write a mail (Tim Gerundt).
    * Internal links should be now work with SSL proxies (Tim Gerundt).
    * Add robots.txt to exclude all web crawlers (Tim Gerundt).

NOCC 1.9.1  March 26, 2011

  Misc
    * Fix a problem, if use wrong username or password (Tim Gerundt).

NOCC 1.9.0  March 19, 2011

  Bugs
    * Bug #3135831 : Call to undefined function dl() in config_check.php on line
      (Tim Gerundt).
    * Bug #3170865 : PHP5 strict - Creating default object from empty value
      (Max Nokhrin).

  Feature Requests
    * RFE #2985080 : Group items in character encoding list (Tim Gerundt).

  Misc
    * Check X-Spam-Flag for YES value (Tim Gerundt).
    * Switch from FCKeditor to CKEditor (Tim Gerundt).
    * Use text links for next/previous mail navigation (Tim Gerundt).
    * Change "Cc self" to "Bcc self" (Tim Gerundt).
    * Fix a problem with shorted subjects in inbox (Tim Gerundt).
    * Don't show none attachment images (Tim Gerundt).
    * Remove Unicode "byte order mark" (BOM) from images (Tim Gerundt).
    * Use "Part X" as filename for attachments without name (Tim Gerundt).
    * Add BMP to the supported image formats (Tim Gerundt).
    * Add debug level for developers (Tim Gerundt).
    * Drop $conf->display_rfc822 (Tim Gerundt).
    * Fix a problem with mails that has no text but attachments (Tim Gerundt).
    * If hide addresses in inbox, hide double quotes too (Tim Gerundt).
    * Fix a problem with invalid multipart mails (Tim Gerundt).
    * Switch to PHP 5 (Tim Gerundt).

NOCC 1.8.3  June 04, 2010

  Bugs
    * Bug #2836784 : imap_utf8() returns only capital letters since PHP 5.2.5
      (Tim Gerundt).
    * Bug #2962990 : full_name preference not quoted in email send (Sean Skogen).
    * Bug #2987135 : Add second "Re:" by reply (Tim Gerundt).
    * Bug #2963603 : Function name tripos instead of stripos, typo? (openfan).