@@ -1,6 +1,7 @@
 NOCC 1.9.2  ???? ??, ????
 
   Misc
+    * Always hide double quotes from mail addresses (Tim Gerundt).
     * Show attachment size in KB if write a mail (Tim Gerundt).
     * Internal links should be now work with SSL proxies (Tim Gerundt).
     * Add robots.txt to exclude all web crawlers (Tim Gerundt).
